==> Yudetamago-AM/pico-vl53l5cx/api/platform.c <==
/*******************************************************************************
* Copyright (c) 2020, STMicroelectronics - All Rights Reserved
*
* This file is part of the VL53L5CX Ultra Lite Driver and is dual licensed,
* either 'STMicroelectronics Proprietary license'
* or 'BSD 3-clause "New" or "Revised" License' , at your option.
*
********************************************************************************
*
* 'STMicroelectronics Proprietary license'
*
********************************************************************************
*
* License terms: STMicroelectronics Proprietary in accordance with licensing
* terms at www.st.com/sla0081
*
* STMicroelectronics confidential
* Reproduction and Communication of this document is strictly prohibited unless
* specifically authorized in writing by STMicroelectronics.
*
*
********************************************************************************
*
* Alternatively, the VL53L5CX Ultra Lite Driver may be distributed under the
* terms of 'BSD 3-clause "New" or "Revised" License', in which case the
* following provisions apply instead of the ones mentioned above :
*
********************************************************************************
*
* License terms: BSD 3-clause "New" or "Revised" License.
*
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are met:
*
* Redistribution and use in source and binary forms, with or without
* modification, are permitted provided that the following conditions are met:
*
* 1. Redistributions of source code must retain the above copyright notice, this
* list of conditions and the following disclaimer.
*
* 2. Redistributions in binary form must reproduce the above copyright notice,
* this list of conditions and the following disclaimer in the documentation
* and/or other materials provided with the distribution.
*
* 3. Neither the name of the copyright holder nor the names of its contributors
* may be used to endorse or promote products derived from this software
* without specific prior written permission.
*
* THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
* AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
* IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
* DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
* FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
* DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
* SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
* CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
* OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
* OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*
*
*******************************************************************************/


#include "platform.h"

//extern i2c_inst_t vl53l5cx_i2c;

#if 0
int i2c_write_with_printfa(i2c_inst_t* i2c_p, uint8_t addr, uint8_t* src, size_t size, bool nostop) {
	//printf("w: %x %0x %d ", addr, *src, size);
	int ret = i2c_write_blocking(i2c_p, addr, src, size, nostop);
	//printf("s: %d\n", ret);
	return (ret);
}

int i2c_read_with_printfa(i2c_inst_t* i2c_p, uint8_t addr, uint8_t* src, size_t size, bool nostop) {
	//printf("r: %x %0x %d ", addr, *src, size);
	int ret = i2c_read_blocking(i2c_p, addr, src, size, nostop);
	//printf("s: %d\n", ret);
	return 	(ret);
}
#endif

uint8_t RdByte(
		VL53L5CX_Platform *p_platform,
		uint16_t RegisterAdress,
		uint8_t *p_value)
{	
	// addr: higher byte first, lower byte second.
	uint8_t tmp[2] = {(uint8_t)(RegisterAdress >> 8 & 0xFF), (uint8_t)(RegisterAdress & 0xFF)};
	i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 2, true);
	int8_t ret = i2c_read_blocking(p_platform->i2c, p_platform->address, p_value, 1, false);

	return ((ret == PICO_ERROR_GENERIC) ? 255 : 0);
}

uint8_t WrByte(
		VL53L5CX_Platform *p_platform,
		uint16_t RegisterAdress,
		uint8_t value)
{

	uint8_t tmp[3] = {(uint8_t)(RegisterAdress >> 8 & 0xFF), (uint8_t)(RegisterAdress & 0xFF), value};
	int8_t ret = i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 3, false);

	return ((ret == PICO_ERROR_GENERIC) ? 255 : 0);
}

uint8_t WrMulti(
		VL53L5CX_Platform *p_platform,
		uint16_t RegisterAdress,
		uint8_t *p_values,
		uint32_t size)
{	
	#if 0
	// send (up to) 32bytes(inlude 2bytes for addr) each
	uint32_t start_index = 0;
	uint32_t remain_bytes = size;

	while (remain_bytes > 0) {
		uint32_t len = remain_bytes;
		if (len > 30) len = 30;

		uint8_t tmp[2] = {(uint8_t)(RegisterAdress >> 8 & 0xFF), (uint8_t)(RegisterAdress & 0xFF)};
		i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 2, true);
		i2c_write_blocking(p_platform->i2c, p_platform->address, &p_values[start_index], (size_t)len, false);

		start_index += len;
		remain_bytes -= len;
		RegisterAdress += len;
	}
	#endif

	#if 0
	i2c_buffer[0] = (uint8_t)(RegisterAdress >> 8); i2c_buffer[1] = (uint8_t)(RegisterAdress & 0xFF);
	memcpy(&i2c_buffer[2], p_values, size);
	i2c_write_blocking(p_platform->i2c, p_platform->address, i2c_buffer, (size + 2), false);
	#endif

	#if 0
	uint8_t tmp[2] = {(uint8_t)(RegisterAdress >> 8), (uint8_t)(RegisterAdress & 0xFF)};
	i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 2, true);
	i2c_write_blocking(p_platform->i2c, p_platform->address, p_values, size, false);
	#endif

	#if 1
	uint8_t tmp[2] = {(uint8_t)(RegisterAdress >> 8), (uint8_t)(RegisterAdress & 0xFF)};
	i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 2, true);

	// send without Start conditions between chunks
	// code below originally comes from "pico-sdk/src/rp2_common/hardware_i2c/i2c.c"
	// which is under BSD 3-Clause "New" or "Reviced" License:
	/*
	Copyright 2020 (c) 2020 Raspberry Pi (Trading) Ltd.

	Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
	following conditions are met:

	1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
	disclaimer.

	2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following
	disclaimer in the documentation and/or other materials provided with the distribution.

	3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products
	derived from this software without specific prior written permission.

	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
	INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
	DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
	SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
	SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
	WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
	THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
	*/
	uint8_t *src = p_values;
	bool abort = false;
    for (int byte_ctr = 0; byte_ctr < size; ++byte_ctr) {
        bool first = byte_ctr == 0;
        bool last = byte_ctr == size - 1;

        (p_platform->i2c)->hw->data_cmd =
                bool_to_bit(last) << I2C_IC_DATA_CMD_STOP_LSB |
                *src++;

        // Wait until the transmission of the address/data from the internal
        // shift register has completed. For this to function correctly, the
        // TX_EMPTY_CTRL flag in IC_CON must be set. The TX_EMPTY_CTRL flag
        // was set in i2c_init.
        do {
            tight_loop_contents();
        } while (!((p_platform->i2c)->hw->raw_intr_stat & I2C_IC_RAW_INTR_STAT_TX_EMPTY_BITS));

        // If there was a timeout, don't attempt to do anything else.
        bool abort_reason = (p_platform->i2c)->hw->tx_abrt_source;
        if (abort_reason) {
            // Note clearing the abort flag also clears the reason, and
            // this instance of flag is clear-on-read! Note also the
            // IC_CLR_TX_ABRT register always reads as 0.
            (p_platform->i2c)->hw->clr_tx_abrt;
            abort = true;
        }

        if (abort || last) {
			// If the transaction was aborted or if it completed
			// successfully wait until the STOP condition has occured.

			// TODO Could there be an abort while waiting for the STOP
			// condition here? If so, additional code would be needed here
			// to take care of the abort.
			do {
				tight_loop_contents();
			} while (!((p_platform->i2c)->hw->raw_intr_stat & I2C_IC_RAW_INTR_STAT_STOP_DET_BITS));
        }

        // Note the hardware issues a STOP automatically on an abort condition.
        // Note also the hardware clears RX FIFO as well as TX on abort,
        // because we set hwparam IC_AVOID_RX_FIFO_FLUSH_ON_TX_ABRT to 0.
        if (abort) return 255;
    }

	// do not send "Restart"
	(p_platform->i2c)->restart_on_next = false;
	// code originally from pico-sdk until here
	#endif

	return 0;
}

uint8_t RdMulti(
		VL53L5CX_Platform *p_platform,
		uint16_t RegisterAdress,
		uint8_t *p_values,
		uint32_t size)
{	
	uint8_t tmp[2] = {(uint8_t)(RegisterAdress >> 8 & 0xFF), (uint8_t)(RegisterAdress & 0xFF)};
	i2c_write_blocking(p_platform->i2c, p_platform->address, tmp, 2, true);
	int8_t ret = i2c_read_blocking(p_platform->i2c, p_platform->address, p_values, size, false);

	return ((ret == PICO_ERROR_GENERIC) ? 255 : 0);
}

uint8_t Reset_Sensor(
		VL53L5CX_Platform *p_platform)
{
	uint8_t status = 0;
	
	/* (Optional) Need to be implemented by customer. This function returns 0 if OK */

	/* Set pin LPN to LOW */
	/* Set pin AVDD to LOW */
	/* Set pin VDDIO  to LOW */
	WaitMs(p_platform, 100);

	/* Set pin LPN of to HIGH */
	/* Set pin AVDD of to HIGH */
	/* Set pin VDDIO of  to HIGH */
	WaitMs(p_platform, 100);

	return status;
}

void SwapBuffer(
		uint8_t 		*buffer,
		uint16_t 	 	 size)
{
	uint32_t i, tmp;
	
	/* Example of possible implementation using <string.h> */
	for(i = 0; i < size; i = i + 4) 
	{
		tmp = (
		  buffer[i]<<24)
		|(buffer[i+1]<<16)
		|(buffer[i+2]<<8)
		|(buffer[i+3]);
		
		memcpy(&(buffer[i]), &tmp, 4);
	}
}	

uint8_t WaitMs(
		VL53L5CX_Platform *p_platform,
		uint32_t TimeMs)
{
	sleep_ms(TimeMs);
	return 0;
}
